--- a/html/css/parts/_header.scss
+++ b/html/css/parts/_header.scss
@@ -1,4 +1,8 @@
 .header {
+    position: sticky;
+    top: 0;
+    width: 100%;
+    z-index: 100;
     background: #FFF;
     box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.10);
     .main_container {
