--- a/html/css/style.scss
+++ b/html/css/style.scss
@@ -144,6 +144,8 @@
             opacity: 0.5;
             bottom: 90px;
             white-space: nowrap;
+            width: 100%;
+            text-align: center;
         }
 
         .home_img {
@@ -232,7 +234,6 @@
         }
     }
 }
-
 
 .accident {
     padding: 100px 0 178px 0;
@@ -539,6 +540,77 @@
         }
 
     }
+
+    .bottom_text_media {
+        display: none;
+        .description {
+            color: #0B1F33;
+            font-family: $Factor;
+            font-size: 12px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 18px;
+            margin-bottom: 17px;
+        }
+
+        .description.title {
+            color: #0B1F33;
+            font-family: $Factor;
+            font-size: 12px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+            margin-bottom: 10px;
+        }
+
+        ul {
+            margin-bottom: 19px;
+        }
+
+        ol {
+            margin-bottom: 16px;
+        }
+
+        ul , ol {
+            li {
+                color: #0B1F33;
+                font-family: $Factor;
+                font-size: 12px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 27px;
+            }
+        }
+
+        .main_title {
+            color: #0B1F33;
+            font-family: $Factor;
+            margin-top: 48px;
+            font-size: 20px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: normal;
+            margin-bottom: 7px;
+        }
+
+        .main_title_2 {
+            color: #0B1F33;
+            font-family: $Factor;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: normal;
+            margin-bottom: 9px;
+        }
+
+        .text_left {
+            ul, ol {
+                li {
+                    font-size: 12px;
+                }
+            }
+        }
+    }
 }
 
 .cards_in {
@@ -641,6 +713,15 @@
 
 .magazine_text {
     margin-top: 60px;
+
+    h2 {
+        color: #0B1F33;
+        font-family: $Factor;
+        font-size: 32px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+    }
     p {
         color: #0B1F33;
         font-family: $Factor;
@@ -980,7 +1061,7 @@
                     font-weight: 700;
                     line-height: 27px;
                     border-radius: 8px;
-                    background: #0D4CD3;
+                    background: #1D5DEB;
                 }
             }
         }
@@ -1341,7 +1422,7 @@
             align-items: center;
             justify-content: center;
             border-radius: 8px;
-            background: #0D4CD3;
+            background: #1D5DEB;
             color: #FFF;
             font-family: $Factor;
             font-size: 16px;
@@ -1408,10 +1489,7 @@
                 font-style: normal;
                 font-weight: 400;
                 line-height: 27px;
-                border-bottom: 1px solid transparent;
-                border-image: url('../images/link_border_img.png');
-                border-image-slice: 20;
-                border-image-repeat: round;
+                border-bottom: 1px dashed;
             }
         }
     }
@@ -1478,7 +1556,7 @@
                 p {
                     padding-left: 20px;
                     text-align: left;
-                    margin-top: 18px;
+                    // margin-top: 18px;
                     color: #0B1F33;
                     font-family: $Factor;
                     font-size: 16px;
@@ -1507,7 +1585,7 @@
             font-weight: 700;
             line-height: 27px;
             border-radius: 8px;
-            background: #0D4CD3;
+            background: #1D5DEB;
         }
     }
 }
@@ -1532,10 +1610,11 @@
             font-style: normal;
             font-weight: 400;
             line-height: 27px;
-            border-bottom: 1px solid transparent;
-            border-image: url('../images/link_border_img.png');
-            border-image-slice: 20;
-            border-image-repeat: round;
+            // border-bottom: 1px solid transparent;
+            // border-image: url('../images/link_border_img.png');
+            // border-image-slice: 20;
+            // border-image-repeat: round;
+            border-bottom: 1px dashed;
         }
     }
 
@@ -1762,13 +1841,18 @@
             font-weight: 400;
             line-height: 27px;
         }
-
-        a:not(.active) {
-            border-bottom: 1px solid transparent;
-            border-image-source: url('../images/tab_border.png');
-            border-image-slice: 20;
-            border-image-repeat: round;
+        
+        .link_dashed {
+            border-bottom: 1px dashed;
+            
         }
+
+        // a:not(.active) {
+        //     border-bottom: 1px solid transparent;
+        //     border-image-source: url('../images/tab_border.png');
+        //     border-image-slice: 20;
+        //     border-image-repeat: round;
+        // }
 
         a.active {
             color: #000;
@@ -2145,7 +2229,7 @@
         ul {
             li {
                 display: flex;
-                align-items: flex-start;
+                align-items: center;
                 gap: 7px;
                 color: #0B1F33;
                 font-family: "Factor A", sans-serif;
