--- a/pages/index.pug
+++ b/pages/index.pug
@@ -139,6 +139,7 @@ html(lang="en")
 
         .main_container.index_card_in_wrapper
             .cards_in.index_card_in
+                h2.cards_in_title Услуги аварийного комиссара в Калининграде служба «50-50-50»
                 .swiper-wrapper 
                     .swiper-slide
                         .card_item 
