--- a/pages/price.pug
+++ b/pages/price.pug
@@ -20,40 +20,41 @@ html(lang="en")
             
             .main_container.text_wrapper.d-flex.align-items-start
                 .text_left
-                    .description
+                    p.description.description_top
                         | Товарищи! сложившаяся структура организации требуют от нас анализа позиций, занимаемых участниками в отношении поставленных задач. Таким образом укрепление и развитие структуры требуют от нас анализа позиций, занимаемых участниками в отношении поставленных задач.
-                        br
-                        br
+
+                    p.description
                         | Равным образом консультация с широким активом требуют определения и уточнения существенных финансовых и административных условий. Идейные соображения высшего порядка, а также начало повседневной работы по формированию позиции обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Таким образом реализация намеченных плановых заданий требуют от нас анализа направлений прогрессивного развития.
-                        .main_title Стиль и размер h2-заголовка
-                        .description Идейные соображения высшего порядка, а также сложившаяся структура организации в значительной степени обуславливает создание существенных финансовых и административных условий. Повседневная практика показывает, что рамки и место обучения кадров требуют определения и уточнения существенных финансовых и административных условий.
-                        .main_title_2 Стиль и размер h3-заголовка
-                        .description Значимость этих проблем настолько очевидна, что рамки и место обучения кадров требуют определения и уточнения новых предложений. Таким образом сложившаяся структура организации требуют определения и уточнения модели развития.
-                        .description.title Стиль маркированного списка:
-                        ul 
-                            li —  Значимость этих проблем настолько очевидна
-                            li —  Разнообразный и богатый опыт
-                            li —  Ссоответствует насущным потребностям
-                        .description.title Стиль нумерованного списка:
-                        ol
-                            li Значимость этих проблем настолько очевидна
-                            li Разнообразный и богатый опыт
-                            li Ссоответствует насущным потребностям
-                        .description.last Повседневная практика показывает, что рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития. Идейные соображения высшего порядка, а также консультация с широким активом представляет собой интересный эксперимент проверки форм развития.
+
+                    h2.main_title Стиль и размер h2-заголовка
+                    p.description Идейные соображения высшего порядка, а также сложившаяся структура организации в значительной степени обуславливает создание существенных финансовых и административных условий. Повседневная практика показывает, что рамки и место обучения кадров требуют определения и уточнения существенных финансовых и административных условий.
+                    h3.main_title_2 Стиль и размер h3-заголовка
+                    p.description Значимость этих проблем настолько очевидна, что рамки и место обучения кадров требуют определения и уточнения новых предложений. Таким образом сложившаяся структура организации требуют определения и уточнения модели развития.
+                    h4.description.title Стиль маркированного списка:
+                    ul 
+                        li —  Значимость этих проблем настолько очевидна
+                        li —  Разнообразный и богатый опыт
+                        li —  Ссоответствует насущным потребностям
+                    h4.description.title Стиль нумерованного списка:
+                    ol
+                        li Значимость этих проблем настолько очевидна
+                        li Разнообразный и богатый опыт
+                        li Ссоответствует насущным потребностям
+                    p.description.last Повседневная практика показывает, что рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития. Идейные соображения высшего порядка, а также консультация с широким активом представляет собой интересный эксперимент проверки форм развития.
                 .text_right
                     .data_list
                         .datas.d-flex.align-items-center.justify-content-between
-                            .data_name Выезд на место ДТП и первичная консультация
-                            .data_value.free Бесплатно
+                            p.data_name Выезд на место ДТП и первичная консультация
+                            span.data_value.free Бесплатно
                         .datas.d-flex.align-items-center.justify-content-between
-                            .data_name Эвакуация Вашего авто для клиентов нашего автосервиса
-                            .data_value Бесплатно
+                            p.data_name Эвакуация Вашего авто для клиентов нашего автосервиса
+                            span.data_value Бесплатно
                         .datas.d-flex.align-items-center.justify-content-between
-                            .data_name Оформление Европротокола
-                            .data_value 1 000 руб.
+                            p.data_name Оформление Европротокола
+                            span.data_value 1 000 руб.
                         .datas.d-flex.align-items-center.justify-content-between
-                            .data_name Оформление документов для ГИБДД
-                            .data_value 2 000 руб.
+                            p.data_name Оформление документов для ГИБДД
+                            span.data_value 2 000 руб.
                     .main_title_2 Другие наши услуги
                     ul.links 
                         li 
